# Narrato

./: .gitignore  README.md  app.py  langgraph.json  main.py  pyproject.toml  requirements.txt
src/graphs/: graph_builder.py
src/llms/: groqllm.py
src/nodes/: blog_node.py
src/states/: blog_state.py
